# segmenter_jordlee

./: .CMakeLists.txt.swp  .gitignore  .package.xml.swp  .travis.yml  .travis.yml.swp  .v4rutils.cmake.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists_BACKUP.txt  CMakeListsbackup.txt  CTestTestfile.cmake  Makefile  OriginalCMakeLists.txt  README.md  cmake_install.cmake  frames.gv  package.xml  segmenter_jordlee.cbp  v4r.pc  v4r.pc.in
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  segmenter_jordlee-msg-extras.cmake.installspace.in  setup_cached.sh
cmake/: cmake_uninstall.cmake  opencv.cmake  segmenter_jordlee-genmsg-context.py  segmenter_jordlee-genmsg.cmake
devel/: .rosinstall  setup.sh
gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
include/: SegmentObject.h  Segmenter.h  Segmenter1.h
model/: PP-Trainingsset.txt.scaled.model  PP2-Trainingsset.txt.scaled.model  mOSDmodel.txt  mOSDmodel_boxes.txt  mOSDmodel_noocclude.txt  param.txt  param2.txt
src/: segmenter_jordlee.cpp  (+3 more)
v4r/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake
v4r/GraphCut/: CMakeLists.txt  CTestTestfile.cmake  Edge.h  Graph.cpp  Graph.h  GraphCut.cpp  GraphCut.h  disjoint-set.h  v4rGraphCut.cbp
v4r/KinectInterface/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Kinect.cpp  Kinect.h  KinectConfigIR.xml  KinectData.cpp  KinectData.h  v4rKinectInterface.cbp
v4r/ObjectModeling/: CMakeLists.txt  CTestTestfile.cmake  ContourRefinement.cpp  ContourRefinement.h  CreateMeshModel.cc  CreateMeshModel.hh  SurfaceBoundary.cpp  SurfaceBoundary.h  Texturing.cpp  Texturing.h  Triangulation.cpp  Triangulation.h  v4rObjectModeling.cbp
v4r/PCLAddOns/: CMakeLists.txt  CTestTestfile.cmake  ContourDetection.hh  PCLFunctions.cpp  PCLFunctions.h  PCLUtils.cpp  PCLUtils.h  PlanePopout.cc  PlanePopout.hh  ZAdaptiveNormals.cc  ZAdaptiveNormals.hh  v4rPCLAddOns.cbp
v4r/SurfaceClustering/: CMakeLists.txt  CTestTestfile.cmake  ClusterNormalsToPlanes.cc  ClusterNormalsToPlanes.hh  ZAdaptiveNormals.hh  v4rSurfaceClustering.cbp
v4r/SurfaceModeling/: CMakeLists.txt  CTestTestfile.cmake  SurfaceModeling.cc  SurfaceModeling.hh  v4rSurfaceModeling.cbp
v4r/SurfaceRelations/: CEdgeExtractor.h  CMakeLists.txt  CTestTestfile.cmake  ColorHistogram.cpp  ColorHistogram.h  ColorHistogram2D.cpp  ColorHistogram2D.h  ColorHistogram3D.cpp  ColorHistogram3D.h  ContourNormalsDistance.cc  ContourNormalsDistance.hh  Fourier.cpp  Fourier.h  Gabor.cpp  Gabor.h  PatchRelations.cpp  PatchRelations.h  Relation.h  Surf.cpp  cvgabor.cpp  cvgabor.h  v4rSurfaceRelations.cbp
v4r/SurfaceSegmenter/: CMakeLists.txt  CTestTestfile.cmake  ModelAbstractor.cpp  ModelAbstractor.h  ModelRefinement.cpp  ModelRefinement.h  PreSegmenter.cpp  PreSegmenter.h  Segmenter.cpp  Segmenter.h
v4r/SurfaceUtils/: CMakeLists.txt~  CTestTestfile.cmake  FileSystem.cc  FileSystem.hh  Relation.h  SurfaceModel.hpp  SurfaceModel.hpp.old  Utils.cc  Utils.hh  v4rSurfaceUtils.cbp
v4r/TomGine/: CMakeLists.txt  CTestTestfile.cmake  GLEvent.h  GLInput.h  GLWindow.h  GLXWindow.cpp  GLXWindowGetEvent.cpp  tgCamera.cpp  tgCamera.h  tgCollission.cpp  tgCollission.h  tgEngine.cpp  tgEngine.h  tgError.cpp  tgFont.cpp  tgFont.h  tgHistDesc2D.cpp  tgHistDesc2D.h  tgImageProcessor.cpp  tgImageProcessor.h  tgMaterial.cpp  tgMaterial.h  tgMathlib.h  tgModel.cpp  tgModel.h  tgModelLoader.cpp  tgNurbsCurve.cpp  tgNurbsCurve.h  tgNurbsSurface.cpp  tgNurbsSurface.h  tgNurbsVolume.cpp  tgNurbsVolume.h  tgPlot2D.cpp  tgPlot2D.h  tgQuaternion.cpp  tgQuaternion.h  tgRenderModel.cpp  tgRenderModel.h  tgShader.cpp  tgShapeCreator.cpp  (+10 more)
v4r/TomGine/shader/: color.frag  coxdeboor.c  ipDilate.frag  ipMultiply.frag  ipSobel.frag  ipSobelNormal.frag  ipSpreading.frag  ipThinning.frag  ipThreshold.frag  nurbssurface.vert
v4r/TomGinePCL/: CTestTestfile.cmake  tgTomGineThreadPCL.h  v4rTomGinePCL.cbp
v4r/TomGinePCL/.svn/: all-wcprops  entries
v4r/TomGinePCL/.svn/text-base/: CMakeLists.txt.svn-base  tgPCL2TomGine.h.svn-base  tgTomGineThreadPCL.cpp.svn-base
v4r/matas/: CMakeLists.txt  CTestTestfile.cmake  PGio.c  canny.h  canny_body.c  gfLL.h  v4rmatas.cbp  writeGF.c
v4r/on_nurbs/: CMakeLists.txt  CMakeLists.txt~  closing_boundary.cpp  closing_boundary.h  fitting_curve_2d.cpp  fitting_curve_2d.h  fitting_curve_2d_apdm.cpp  fitting_curve_2d_apdm.h  fitting_curve_2d_asdm.cpp  fitting_curve_2d_asdm.h  fitting_curve_2d_atdm.cpp  fitting_curve_2d_atdm.h  fitting_curve_2d_pdm.cpp  fitting_curve_2d_pdm.h  fitting_curve_2d_sdm.cpp  fitting_curve_2d_sdm.h  fitting_curve_2d_tdm.cpp  fitting_curve_2d_tdm.h  fitting_curve_pdm.cpp  fitting_curve_pdm.h  fitting_cylinder_pdm.cpp  fitting_cylinder_pdm.h  fitting_sphere_pdm.cpp  fitting_sphere_pdm.h  fitting_surface_im.cpp  fitting_surface_im.h  fitting_surface_pdm.cpp  fitting_surface_pdm.h  fitting_surface_tdm.cpp  fitting_surface_tdm.h  global_optimization_pdm.cpp  global_optimization_pdm.h  global_optimization_tdm.cpp  global_optimization_tdm.h  nurbs_solve.h  nurbs_solve_eigen.cpp  nurbs_solve_umfpack.cpp  nurbs_tools.cpp  nurbs_tools.h  sequential_fitter.cpp  (+4 more)
v4r/opennurbs/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_original.txt
v4r/svm/: CMakeLists.txt  CTestTestfile.cmake  SVMFileCreator.cpp  SVMFileCreator.h  SVMPredictorSingle.cpp  SVMPredictorSingle.h  svm.cpp  svm.h  v4rsvm.cbp
v4r/vs3/: Arc.cc  CTestTestfile.cmake  Draw.cc  Draw.hh  Ellipse.cc  FormArcJunctions.cc  FormArcs.cc  FormJunctions.cc  FormSegments.cc  IdImage.cc  Math.ic  Segment.cc  VisionCore.cc  VisionCore.hh  VoteImage.hh  v4rvs3.cbp
v4r/vs3/.svn/: all-wcprops  entries
v4r/vs3/.svn/text-base/: AJunction.cc.svn-base  CMakeLists.txt.svn-base  Closure.cc.svn-base  Color.cc.svn-base  Edgel.hh.svn-base  FormEllipses.cc.svn-base  FormEllipses.hh.svn-base  Gestalt.hh.svn-base  Histogram.cpp.svn-base  Segment.hh.svn-base  Vector2.hh.svn-base  VoteImage.cc.svn-base
v4rexternal/TTL-1.1.0/: .cproject  .project  CMakeLists.txt  CTestTestfile.cmake  Handle.h  HandleId.cpp  HeDart.h  HeTraits.h  HeTriang.cpp  HeTriang.h  README  ttl.cbp
(+11 files in other folders)
