<?xml version="1.0"?>

<package>
  <name>segmenter_jordlee</name>
  <version>1.1.0</version>
  <description>ROS package to segment objects.</description>
  <maintainer email="unghee@umich.edu">Unghee Jordan Lee</maintainer>
  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>

 <!--<build_depend>libopencv</build_depend>-->
  <build_depend>libpcl-all-dev</build_depend>  
  <!--build_depend>libpcl-1.7-all</build_depend-->
  <!--build_depend>libpcl-surface-1.7</build_depend-->
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>	
  <build_depend>std_srvs</build_depend>  
<!--<run_depend>libopencv</run_depend>-->
  <run_depend>libpcl-all</run_depend>
  <!--run_depend>libpcl-surface-1.7</run_depend-->
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>cv_bridge</run_depend> 
  <run_depend>std_srvs</run_depend>

</package>
