add_subdirectory(GraphCut)
add_subdirectory(KinectInterface)
add_subdirectory(matas)
add_subdirectory(PCLAddOns)
add_subdirectory(SurfaceClustering)
add_subdirectory(SurfaceModeling)
add_subdirectory(SurfaceRelations)
add_subdirectory(SurfaceSegmenter)
add_subdirectory(SurfaceUtils)
add_subdirectory(svm)
add_subdirectory(TomGine)
add_subdirectory(TomGinePCL)
add_subdirectory(ObjectModeling)
add_subdirectory(vs3)
